<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/fixed_price"
            android:textColor="@color/black_26"
            android:textSize="@dimen/text_14"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="¥ :"
                android:textColor="@color/black_26"
                android:textSize="@dimen/text_16"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_weight="4"
                android:background="@null"
                android:drawableRight="@drawable/icon_more_gray"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:text="500.00"/>

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/divider_h"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:text="@string/category"
            android:textColor="@color/black_26"
            android:textSize="@dimen/text_14"/>

        <TextView
            android:id="@+id/tv_select_category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="4"
            android:background="@null"
            android:drawableRight="@drawable/icon_more_gray"
            android:gravity="center_vertical"
            android:text="@string/please_select_category"
            android:textColor="@color/black_26"
            android:textSize="@dimen/text_14"/>
    </LinearLayout>

    <View
        style="@style/divider_h"
        android:layout_height="match_parent"/>

</LinearLayout>